--- a/app/src/main/res/layout/car_item.xml
+++ b/app/src/main/res/layout/car_item.xml
@@ -34,6 +34,7 @@
                 android:layout_marginEnd="15dp"
                 android:layout_alignParentStart="true"
                 android:adjustViewBounds="true"
+                android:picture="@{viewModel.getCarDetailsAt(position).picture}"
                 android:contentDescription="@string/car_image" />
     
             <TextView
