Refactored to remove availability from the Cars API and making another API call for fetching and using it. WIP availability sort is breaking

--- a/app/src/main/res/layout/car_item.xml
+++ b/app/src/main/res/layout/car_item.xml
@@ -10,6 +10,9 @@
         <variable
             name="position"
             type="java.lang.Integer" />
+        <variable
+            name="carAvailability"
+            type="java.lang.String" />
     </data>
     
     <androidx.cardview.widget.CardView
@@ -70,7 +73,7 @@
                 android:layout_height="wrap_content"
                 android:layout_toEndOf="@id/picture"
                 android:layout_below="@id/model"
-                android:text='@{viewModel.getCarDetailsAt(position).availability}'
+                android:text="@{carAvailability}"
                 tools:text="Car Availability" />
     
             <TextView
